fixed spacing

--- a/global.scss
+++ b/global.scss
@@ -14,18 +14,20 @@
   flex-direction:column;
   width: 100%;
   gap: 5px;
+  
   div {
     width: 100%;
     gap: 5px;
     display: flex;  
-    flex-wrap: wrap;
     flex-direction: row;
-    border: solid;
+    align-items: center;
+    justify-content: center;
     .paramStorage {
       background-color: #FF9F9F;
       display: flex;
       flex-direction: wrap;
       flex-direction: column;
+      height: 100%;
     }
   }
 }
@@ -44,7 +46,8 @@
   width: 100%;
   div {
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     flex-direction: row;
     width: 100%;
     gap: 5px;
@@ -54,6 +57,8 @@
       flex-direction: column;
       background-color: #FF9F9F;
       text-align: center;
+      height: 100%;
+      justify-content: flex-start;
       div {
         display: flex;
         flex-wrap: wrap;
@@ -66,8 +71,8 @@
 }
 
 #sizeTable {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  width: 100%;
   label {
     text-align: right;
     max-width: 300px;
@@ -77,11 +82,11 @@
 #clockTable {
   div {
     display: grid;
-    grid: auto auto;
-    border-color: #100804;
-    border: solid;
+    justify-content: center;
+    grid-template-columns: auto auto;
+    width: 100%;
     button {
-      max-width: 100px;
+      width: 100%;
     }
   }
 }
